--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -90,6 +90,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-29-clash-node.htm">
+					<img src="/uploads/20240228/5faefa7f3266b2052cc429ac9dbbdaf6.webp" alt="3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-29-clash-node.htm">
+					<h2>3月29日→18.2M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了新加坡、加拿大、韩国、美国、香港、欧洲、日本等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-28-clash-windows.htm">
 					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接" class="img-responsive" />
 				</a>
@@ -231,24 +247,8 @@
 			<div class="clearfix"> </div>
 		</div>
 	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-19-clash-windows.htm">
-					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-19-clash-windows.htm">
-					<h2>3月19日22M/S|V2ray/SSR/Clash/Shadowrocket免费节点每天更新订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了日本、香港、加拿大、欧洲、韩国、新加坡、美国等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
 	
-	<ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul><!-- //welcome -->
+	<ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul><!-- //welcome -->
 <!-- footer -->
 	
 	<div class="copy-right-social">
