--- a/free-nodes/2024-4-3-shadowrocket-node.htm
+++ b/free-nodes/2024-4-3-shadowrocket-node.htm
@@ -3,12 +3,12 @@
 <html lang="zh-CN">
 <head>
 <link rel="canonical" href="https://clashgithub.github.io" />
-<title>4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</title>
+<title>4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="4月2日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
-<meta name="description" content="4月2日节点订阅更新,Clash/SSR/Shadowrocket/V2ray免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了加拿大、香港、美国、韩国、日本、新加坡、欧洲等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
+<meta name="keywords" content="4月3日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
+<meta name="description" content="4月3日节点订阅更新,Clash/Shadowrocket/V2ray/SSR免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了香港、韩国、欧洲、新加坡、美国、加拿大、日本等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -80,7 +80,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1 style="word-break: break-all;">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h1>
+			<h1 style="word-break: break-all;">4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
@@ -94,25 +94,24 @@
 		<div class="container">
 
 			<div class="wthree_single_grid1">
-				<p>这次的更新跨足了加拿大、香港、美国、韩国、日本、新加坡、欧洲等多个地区，节点覆盖广泛，最高速度可达18 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【EFCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
-IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-
-
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.easyfastcloud.com/#/register?code=" data-code="wcHPHUo2" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">EFCloud（点击注册）</a>】</p>
-
-<h3>高速机场推荐2【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+				<p>这次的更新跨足了香港、韩国、欧洲、新加坡、美国、加拿大、日本等多个地区，节点覆盖广泛，最高速度可达22.8 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.fastconnectcloud1.com//#/register?code=" data-code="x1m5Kg8R" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">FCCloud（点击注册）</a>】</p>
 
-<p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/04/0-20240402.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/1-20240402.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/2-20240402.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/3-20240402.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/4-20240402.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/04/0-20240402.txt</p><p>https://clashgithub.github.io/uploads/2024/04/1-20240402.txt</p><p>https://clashgithub.github.io/uploads/2024/04/2-20240402.txt</p><p>https://clashgithub.github.io/uploads/2024/04/3-20240402.txt</p><p>https://clashgithub.github.io/uploads/2024/04/4-20240402.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
+<h3>高速机场推荐2【EFCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">新用户8折优惠，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+
+
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.easyfastcloud.com/#/register?code=" data-code="wcHPHUo2" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">EFCloud（点击注册）</a>】</p>
+
+<p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/04/0-20240403.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/1-20240403.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/2-20240403.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/3-20240403.yaml</p><p>https://clashgithub.github.io/uploads/2024/04/4-20240403.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/04/0-20240403.txt</p><p>https://clashgithub.github.io/uploads/2024/04/1-20240403.txt</p><p>https://clashgithub.github.io/uploads/2024/04/2-20240403.txt</p><p>https://clashgithub.github.io/uploads/2024/04/3-20240403.txt</p><p>https://clashgithub.github.io/uploads/2024/04/4-20240403.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
 
             <div class="col-md-12 mt-5">
-                                <p>上一个：<a href="/free-nodes/2024-4-1-clash-node.htm">4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></p>
-                                <p>下一个：<a href="/free-nodes/2024-4-3-shadowrocket-node.htm">4月3日→22.8M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接</a></p>
+                                <p>上一个：<a href="/free-nodes/2024-4-2-clash-node.htm">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></p>
                             </div>
 
                         <div class="panel panel-default mt-5">
@@ -121,6 +120,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 </div>
                 <div class="panel-body">
                     <ul class="p-0 x-0">
+                                                <li class="py-2"><a href="/free-nodes/2024-4-2-clash-node.htm">4月2日→18M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-4-1-clash-node.htm">4月1日→19.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-31-free-node-subscribe.htm">3月31日→18.4M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
@@ -130,7 +130,6 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                                                 <li class="py-2"><a href="/free-nodes/2024-3-26-shadowrocket-node.htm">3月26日→19.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-25-free-ssr-node.htm">3月25日→22.9M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-3-24-shadowrocket-node.htm">3月24日→22.4M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-3-23-free-ssr-subscribe.htm">3月23日→22.7M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接</a></li>
                                             </ul>
                 </div>
             </div>
